# sdl2xx

./: .hgignore  COPYING  Makefile.am  README.md  configure.ac
examples/dvd-logo/: Makefile.am
examples/dvd-logo/src/: main.cpp
examples/simple/: Makefile.am
examples/simple/src/: main.cpp
include/sdl2xx/: allocator.hpp  angle.hpp  audio.hpp  basic_locker.hpp  basic_wrapper.hpp  blob.hpp  clipboard.hpp  color.hpp  display.hpp  endian.hpp  error.hpp  events.hpp  game_controller.hpp  game_controllers.hpp  gl.hpp  guid.hpp  img.hpp  init.hpp  joystick.hpp  joysticks.hpp  mix.hpp  mouse.hpp  observable_wrapper.hpp  owner_wrapper.hpp  pixels.hpp  rect.hpp  renderer.hpp  rwops.hpp  sdl.hpp  sensor.hpp  sensors.hpp  string.hpp  surface.hpp  texture.hpp  ttf.hpp  unique_ptr.hpp  vec2.hpp  vector.hpp  video.hpp  window.hpp
src/: allocator.cpp  angle.cpp  audio.cpp  blob.cpp  clipboard.cpp  color.cpp  display.cpp  error.cpp  events.cpp  game_controller.cpp  game_controllers.cpp  gl.cpp  guid.cpp  img.cpp  init.cpp  joystick.cpp  joysticks.cpp  mix.cpp  mouse.cpp  pixels.cpp  rect.cpp  renderer.cpp  rwops.cpp  sensor.cpp  sensors.cpp  surface.cpp  texture.cpp  ttf.cpp  vec2.cpp  video.cpp  window.cpp
src/impl/: utils.cpp  utils.hpp
